--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.3.4
+cloudinary==1.25.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.5
 Django==3.2.3
 gunicorn==20.1.0
 psycopg2==2.8.6
